Complete webapp 60 percent

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
     <!--========== PARALLAX ==========-->
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
         <div class="parallax-content container">
-            <h1 class="carousel-title">Contact</h1>
+            <h1 class="carousel-title">Contact Us</h1>
             <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim estudiat veniam siad
                 venumus dolore</p>
         </div>
@@ -101,12 +101,12 @@
                 <!-- Contact List -->
                 <div class="col-sm-4 sm-margin-b-50">
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                        <h3><a href="#">New York</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
+                        <h3><a href="#">Mumbai</a> <span class="text-uppercase margin-l-20">Head Office</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                             magna ut consequat siad esqudiat dolor</p>
                         <ul class="list-unstyled contact-list">
-                            <li><i class="margin-r-10 color-base icon-call-out"></i> 1 012 3456 7890</li>
-                            <li><i class="margin-r-10 color-base icon-envelope"></i> hq@acidus.com</li>
+                            <li><i class="margin-r-10 color-base icon-call-out"></i> +91-8130503799</li>
+                            <li><i class="margin-r-10 color-base icon-envelope"></i> mail@thebinarystudio.com</li>
                         </ul>
                     </div>
                 </div>
@@ -115,19 +115,19 @@
                 <!-- Contact List -->
                 <div class="col-sm-4 sm-margin-b-50">
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                        <h3><a href="#">London</a> <span class="text-uppercase margin-l-20">Operation</span></h3>
+                        <h3><a href="#">Noida</a> <span class="text-uppercase margin-l-20">Operation</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                             magna ut consequat siad esqudiat dolor</p>
                         <ul class="list-unstyled contact-list">
-                            <li><i class="margin-r-10 color-base icon-call-out"></i> 44 77 3456 7890</li>
-                            <li><i class="margin-r-10 color-base icon-envelope"></i> operation@acidus.com</li>
+                            <li><i class="margin-r-10 color-base icon-call-out"></i> +91-9643633485</li>
+                            <li><i class="margin-r-10 color-base icon-envelope"></i> mail@thebinarystudio.com</li>
                         </ul>
                     </div>
                 </div>
                 <!-- End Contact List -->
 
                 <!-- Contact List -->
-                <div class="col-sm-4 sm-margin-b-50">
+                <!-- <div class="col-sm-4 sm-margin-b-50">
                     <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
                         <h3><a href="#">Singapore</a> <span class="text-uppercase margin-l-20">Finance</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
@@ -137,7 +137,7 @@
                             <li><i class="margin-r-10 color-base icon-envelope"></i> finance@acidus.com</li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <!-- End Contact List -->
             </div>
             <!--// end row -->
@@ -146,10 +146,10 @@
     <!-- End Contact List -->
 
     <!-- Google Map -->
-    <div id="map" class="map height-400"></div>
+    <!-- <div id="map" class="map height-400"></div> -->
 
     <!-- Promo Section -->
-    <div class="promo-section overflow-h">
+    <!-- <div class="promo-section overflow-h">
         <div class="container">
             <div class="clearfix">
                 <div class="ver-center">
@@ -171,7 +171,7 @@
         <div class="promo-section-img-right">
             <img class="img-responsive" src="img/970x970/01.jpg" alt="Content Image">
         </div>
-    </div>
+    </div> -->
     <!-- End Promo Section -->
     <!--========== END PAGE LAYOUT ==========-->
 
@@ -227,7 +227,7 @@
                 </div>
                 <div class="col-xs-6 text-right">
                     <p class="margin-b-0"><a class="color-base fweight-700" href="index.html">the
-                        binary studio</a></p>
+                            binary studio</a></p>
                 </div>
             </div>
             <!--// end row -->
