--- a/index.html
+++ b/index.html
@@ -356,15 +356,15 @@
     <!-- End Clients -->
 
     <!-- Testimonials -->
-    <div class="content-lg container">
-        <div class="row">
-            <div class="col-sm-9">
-                <h2>Customer Reviews</h2>
+    <!-- <div class="content-lg container"> -->
+    <!-- <div class="row"> -->
+    <!-- <div class="col-sm-9"> -->
+    <!-- <h2>Customer Reviews</h2> -->
 
-                <!-- Swiper Testimonials -->
-                <div class="swiper-slider swiper-testimonials">
-                    <!-- Swiper Wrapper -->
-                    <div class="swiper-wrapper">
+    <!-- Swiper Testimonials -->
+    <!-- <div class="swiper-slider swiper-testimonials"> -->
+    <!-- Swiper Wrapper -->
+    <!-- <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <blockquote class="blockquote">
                                 <div class="margin-b-20">
@@ -393,26 +393,26 @@
                                 <p><span class="fweight-700 color-link">Alex Clarson</span>, Metronic Customer</p>
                             </blockquote>
                         </div>
-                    </div>
-                    <!-- End Swiper Wrapper -->
+                    </div> -->
+    <!-- End Swiper Wrapper -->
 
-                    <!-- Pagination -->
-                    <div class="swiper-testimonials-pagination"></div>
-                </div>
-                <!-- End Swiper Testimonials -->
-            </div>
-        </div>
-        <!--// end row -->
-    </div>
+    <!-- Pagination -->
+    <!-- <div class="swiper-testimonials-pagination"></div> -->
+    <!-- </div> -->
+    <!-- End Swiper Testimonials -->
+    <!-- </div> -->
+    <!-- </div> -->
+    <!--// end row -->
+    <!-- </div> -->
     <!-- End Testimonials -->
 
     <!-- Pricing -->
-    <div class="bg-color-sky-light">
-        <div class="content-lg container">
-            <div class="row row-space-1">
-                <div class="col-sm-4 sm-margin-b-2">
-                    <!-- Pricing -->
-                    <div class="pricing">
+    <!-- <div class="bg-color-sky-light"> -->
+    <!-- <div class="content-lg container"> -->
+    <!-- <div class="row row-space-1"> -->
+    <!-- <div class="col-sm-4 sm-margin-b-2"> -->
+    <!-- Pricing -->
+    <!-- <div class="pricing">
                         <div class="margin-b-30">
                             <i class="pricing-icon icon-chemistry"></i>
                             <h3>Starter Kit <span> - $</span> 49</h3>
@@ -424,12 +424,12 @@
                             <li class="pricing-list-item">50 Users Panels</li>
                         </ul>
                         <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                    </div>
-                    <!-- End Pricing -->
-                </div>
-                <div class="col-sm-4 sm-margin-b-2">
-                    <!-- Pricing -->
-                    <div class="pricing pricing-active">
+                    </div> -->
+    <!-- End Pricing -->
+    <!-- </div> -->
+    <!-- <div class="col-sm-4 sm-margin-b-2"> -->
+    <!-- Pricing -->
+    <!-- <div class="pricing pricing-active">
                         <div class="margin-b-30">
                             <i class="pricing-icon icon-badge"></i>
                             <h3>Professional <span> - $</span> 149</h3>
@@ -441,12 +441,12 @@
                             <li class="pricing-list-item">100 Users Panels</li>
                         </ul>
                         <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                    </div>
-                    <!-- End Pricing -->
-                </div>
-                <div class="col-sm-4">
-                    <!-- Pricing -->
-                    <div class="pricing">
+                    </div> -->
+    <!-- End Pricing -->
+    <!-- </div> -->
+    <!-- <div class="col-sm-4"> -->
+    <!-- Pricing -->
+    <!-- <div class="pricing">
                         <div class="margin-b-30">
                             <i class="pricing-icon icon-shield"></i>
                             <h3>Advanced <span> - $</span> 249</h3>
@@ -458,17 +458,17 @@
                             <li class="pricing-list-item">Unlimited Users Panels</li>
                         </ul>
                         <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                    </div>
-                    <!-- End Pricing -->
-                </div>
-            </div>
-            <!--// end row -->
-        </div>
-    </div>
+                    </div> -->
+    <!-- End Pricing -->
+    <!-- </div> -->
+    <!-- </div> -->
+    <!--// end row -->
+    <!-- </div> -->
+    <!-- </div> -->
     <!-- End Pricing -->
 
     <!-- Promo Section -->
-    <div class="promo-section overflow-h">
+    <!-- <div class="promo-section overflow-h">
         <div class="container">
             <div class="clearfix">
                 <div class="ver-center">
@@ -490,7 +490,7 @@
         <div class="promo-section-img-right">
             <img class="img-responsive" src="img/970x970/01.jpg" alt="Content Image">
         </div>
-    </div>
+    </div> -->
     <!-- End Promo Section -->
 
     <!-- Work -->
@@ -498,7 +498,7 @@
         <div class="content-lg container">
             <div class="row margin-b-40">
                 <div class="col-sm-6">
-                    <h2>Showcase</h2>
+                    <h2>Sketch & Graphics</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore
                         magna aliqua enim minim veniam exercitation</p>
                 </div>
