--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
     <!--========== PARALLAX ==========-->
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
         <div class="parallax-content container">
-            <h1 class="carousel-title">Products</h1>
+            <h1 class="carousel-title">Projects</h1>
             <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim estudiat veniam siad
                 venumus dolore</p>
         </div>
@@ -197,64 +197,6 @@
     </div>
     <!-- End Our Exceptional Solutions -->
 
-    <!-- Clients -->
-    <div class="bg-color-sky-light">
-        <div class="content-lg container">
-            <!-- Swiper Clients -->
-            <div class="swiper-slider swiper-clients">
-                <!-- Swiper Wrapper -->
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/01.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/02.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/03.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/04.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/05.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/06.png" alt="Clients Logo">
-                    </div>
-                </div>
-                <!-- End Swiper Wrapper -->
-            </div>
-            <!-- End Swiper Clients -->
-        </div>
-    </div>
-    <!-- End Clients -->
-
-    <!-- Promo Section -->
-    <div class="promo-section overflow-h">
-        <div class="container">
-            <div class="clearfix">
-                <div class="ver-center">
-                    <div class="ver-center-aligned">
-                        <div class="promo-section-col">
-                            <h2>Our Clients</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret
-                                dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur
-                                adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua enim minim veniam
-                                exercitation</p>
-                            <p>Ipsum dolor sit amet consectetur adipiscing elit sed tempor incididut ut sead laboret
-                                dolore magna aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur
-                                adipiscing</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="promo-section-img-right">
-            <img class="img-responsive" src="img/970x970/01.jpg" alt="Content Image">
-        </div>
-    </div>
-    <!-- End Promo Section -->
     <!--========== END PAGE LAYOUT ==========-->
 
     <!--========== FOOTER ==========-->
@@ -309,7 +251,7 @@
                 </div>
                 <div class="col-xs-6 text-right">
                     <p class="margin-b-0"><a class="color-base fweight-700" href="index.html">the
-                        binary studio</a></p>
+                            binary studio</a></p>
                 </div>
             </div>
             <!--// end row -->
