--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
     <!--========== PARALLAX ==========-->
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/1920x1080/01.jpg">
         <div class="parallax-content container">
-            <h1 class="carousel-title">Product Pricing</h1>
+            <h1 class="carousel-title">Our Services</h1>
             <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua <br /> enim minim estudiat veniam siad
                 venumus dolore</p>
         </div>
@@ -94,156 +94,141 @@
     <!--========== PARALLAX ==========-->
 
     <!--========== PAGE LAYOUT ==========-->
-    <!-- Pricing -->
-    <div class="bg-color-sky-light">
+
+
+    <!-- Service -->
+    <div class="bg-color-sky-light" data-auto-height="true">
         <div class="content-lg container">
-            <div class="row row-space-1">
+            <div class="row row-space-1 margin-b-2">
                 <div class="col-sm-4 sm-margin-b-2">
-                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                        <!-- Pricing -->
-                        <div class="pricing">
-                            <div class="margin-b-30">
-                                <i class="pricing-icon icon-chemistry"></i>
-                                <h3>Starter Kit <span> - $</span> 49</h3>
-                                <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                        <div class="service" data-height="height">
+                            <div class="service-element">
+                                <img src="./img//icons/Icon-Architecture.png" class="service-icon adjust"></img>
                             </div>
-                            <ul class="list-unstyled pricing-list margin-b-50">
-                                <li class="pricing-list-item">Basic Features</li>
-                                <li class="pricing-list-item">Up to 5 products</li>
-                                <li class="pricing-list-item">50 Users Panels</li>
-                            </ul>
-                            <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                            <div class="service-info">
+                                <h3>Architectural Design</h3>
+                                <p class="margin-b-5">Architectural Services includes from the concept visualization to
+                                    submission drawings till construction. We question everything during the process
+                                    and are always looking for better materials, methods, and options.
+                                    We manage the entire process, progress, interaction with local
+                                    authorities and keep our clients fully informed all the way in design and
+                                    development work.</p>
+                            </div>
+                            <a href="#" class="content-wrapper-link"></a>
                         </div>
-                        <!-- End Pricing -->
                     </div>
                 </div>
                 <div class="col-sm-4 sm-margin-b-2">
-                    <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".2s">
-                        <!-- Pricing -->
-                        <div class="pricing pricing-active">
-                            <div class="margin-b-30">
-                                <i class="pricing-icon icon-badge"></i>
-                                <h3>Professional <span> - $</span> 149</h3>
-                                <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
+                        <div class="service" data-height="height">
+                            <div class="service-element">
+                                <img src="./img/icons/Icon-Construction.png" class="service-icon adjust"></img>
                             </div>
-                            <ul class="list-unstyled pricing-list margin-b-50">
-                                <li class="pricing-list-item">Basic Features</li>
-                                <li class="pricing-list-item">Up to 100 products</li>
-                                <li class="pricing-list-item">100 Users Panels</li>
-                            </ul>
-                            <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                            <div class="service-info">
+                                <h3>Construction Administration</h3>
+                                <p class="margin-b-5">
+                                    During the construction period, we make ourselves available to the contractor to
+                                    answer any questions and address any concerns they may have. We are involved during
+                                    the construction to represent the owner to conduct site observation visits, to
+                                    monitor progress, to prepare any required change orders.
+                                </p>
+                            </div>
+                            <a href="#" class="content-wrapper-link"></a>
                         </div>
-                        <!-- End Pricing -->
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="wow fadeInRight" data-wow-duration=".3" data-wow-delay=".1s">
-                        <!-- Pricing -->
-                        <div class="pricing">
-                            <div class="margin-b-30">
-                                <i class="pricing-icon icon-shield"></i>
-                                <h3>Advanced <span> - $</span> 249</h3>
-                                <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
+                        <div class="service" data-height="height">
+                            <div class="service-element">
+                                <img src="./img/icons/Icon-Interior.png" class="service-icon adjust"></img>
                             </div>
-                            <ul class="list-unstyled pricing-list margin-b-50">
-                                <li class="pricing-list-item">Extended Features</li>
-                                <li class="pricing-list-item">Unlimited products</li>
-                                <li class="pricing-list-item">Unlimited Users Panels</li>
-                            </ul>
-                            <a href="services.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                            <div class="service-info">
+                                <h3>Interior Design</h3>
+                                <p class="margin-b-5">
+                                    Interior design completes the project and goes a long way in defining the image or
+                                    identifying the structure. We collaborates with the client in defining the image
+                                    and how to achieve it in the selection of colors,materials, textures, and Finishes.
+                                </p>
+                            </div>
+                            <a href="#" class="content-wrapper-link"></a>
                         </div>
-                        <!-- End Pricing -->
+                    </div>
+                </div>
+            </div>
+            <!--// end row -->
+
+            <div class="row row-space-1">
+                <div class="col-sm-4 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
+                        <div class="service" data-height="height">
+                            <div class="service-element">
+                                <img src="./img/icons/Icon-Sustainable.png" class="service-icon adjust"></img src="./img/icons/Icon-Sustainable.png">
+                            </div>
+                            <div class="service-info">
+                                <h3>Sustainable Design</h3>
+                                <p class="margin-b-5">
+
+                                    Responsible design requires attention to sustainable and environmentally sound
+                                    solutions. We approach every project with that in mind. Practical solutions to
+                                    design will provide the client with added value over years of use. We are committed
+                                    to this approach of sustainable, energy efficient, and green solutions.
+
+                                </p>
+                            </div>
+                            <a href="#" class="content-wrapper-link"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
+                        <div class="service" data-height="height">
+                            <div class="service-element">
+                                <img src="./img/icons/Icon-furniture.png" class="service-icon adjust"></img>
+                            </div>
+                            <div class="service-info">
+                                <h3>Furniture Design</h3>
+                                <p class="margin-b-5">
+
+                                    We believe in products made with the best quality materials and one-of-a-kind
+                                    design that brings a unique sensibility to spaces and lifestyle. We believe every
+                                    space has a different story and demands something unique. We develop and make new
+                                    products that can be customized according to your space,specific needs & your
+                                    lifestyle.
+
+                                </p>
+                            </div>
+                            <a href="#" class="content-wrapper-link"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
+                        <div class="service" data-height="height">
+                            <div class="service-element">
+                                <img src="./img/icons/Icon-Visual Merchandising.png" class="service-icon adjust"></img>
+                            </div>
+                            <div class="service-info">
+                                <h3>Commercial Visual Merchandising</h3>
+                                <p class="margin-b-5">Visual Merchandising is clearly about creating merchandising
+                                    presentations that are exciting, captivating and engaging to the consumer. We work
+                                    closely with Clients to analyze the effectiveness of their visual merchandising
+                                    techniques: from store planning to visual sight lines and best utilization of
+                                    provided space in order to create a perfect point of sale. Our team is specialized
+                                    in designing cafes, restaurants, retail, and automobile stores.</p>
+                            </div>
+                            <a href="#" class="content-wrapper-link"></a>
+                        </div>
                     </div>
                 </div>
             </div>
             <!--// end row -->
         </div>
     </div>
-    <!-- End Pricing -->
+    <!-- End Service -->
 
-    <!-- Testimonials -->
-    <div class="content-lg container">
-        <div class="row">
-            <div class="col-sm-9">
-                <h2>Why Customers Are Choosing Asentus?</h2>
 
-                <!-- Swiper Testimonials -->
-                <div class="swiper-slider swiper-testimonials">
-                    <!-- Swiper Wrapper -->
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <blockquote class="blockquote">
-                                <div class="margin-b-20">
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut
-                                    laboret dolore magna aliqua. Ut enim minim veniam exercitation laboris ut siad
-                                    consequat siad minim enum esqudiat dolore.
-                                </div>
-                                <div class="margin-b-20">
-                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut
-                                    laboret tempor incididunt dolore magna consequat siad minim aliqua.
-                                </div>
-                                <p><span class="fweight-700 color-link">Joh Milner</span>, Metronic Customer</p>
-                            </blockquote>
-                        </div>
-                        <div class="swiper-slide">
-                            <blockquote class="blockquote">
-                                <div class="margin-b-20">
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                                    culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                                <div class="margin-b-20">
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                    ex ea commodo consequat.
-                                </div>
-                                <p><span class="fweight-700 color-link">Alex Clarson</span>, Metronic Customer</p>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <!-- End Swiper Wrapper -->
-
-                    <!-- Pagination -->
-                    <div class="swiper-testimonials-pagination"></div>
-                </div>
-                <!-- End Swiper Testimonials -->
-            </div>
-        </div>
-        <!--// end row -->
-    </div>
-    <!-- End Testimonials -->
-
-    <!-- Clients -->
-    <div class="bg-color-sky-light">
-        <div class="content-lg container">
-            <!-- Swiper Clients -->
-            <div class="swiper-slider swiper-clients">
-                <!-- Swiper Wrapper -->
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/01.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/02.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/03.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/04.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/05.png" alt="Clients Logo">
-                    </div>
-                    <div class="swiper-slide">
-                        <img class="swiper-clients-img" src="img/clients/06.png" alt="Clients Logo">
-                    </div>
-                </div>
-                <!-- End Swiper Wrapper -->
-            </div>
-            <!-- End Swiper Clients -->
-        </div>
-    </div>
-    <!-- End Clients -->
     <!--========== END PAGE LAYOUT ==========-->
 
     <!--========== FOOTER ==========-->
