--- a/about.html
+++ b/about.html
@@ -332,11 +332,18 @@
                     </div>
                     <h4><a href="#">Prashant Pandey</a> <span class="text-uppercase margin-l-20">Architect</span></h4>
                     <p>
-
-                        He holds a Bachelor of Architecture from the Faculty of Architecture & Ekistics, Jamia Millia
-                        Islamia, New Delhi, is a licensed architect with the Council of Architecture India.
-
+                        Prashant holds a Bachelor of Architecture from the Faculty of Architecture & Ekistics, Jamia
+                        Millia Islamia, New Delhi, is a licensed architect with the Council of Architecture India.
                     </p>
+                    <p id="more-desc-01">
+                        He has a strong interest in sustainability which reflects through his design. He is also
+                        certified IGBC-AP.
+                        Before founding the binary studio he practiced as an architect at the “Novarch Architects”, New
+                        Delhi & “Matrika Design collaborative”, Mumbai.
+                        As a student, he won a design competition at Delhi Architecture festival in the commercial
+                        category for the concept of his entry. (re-thinking the future)
+                    </p>
+                    <a class="link" id="read-more-01">Read More</a>
                 </div>
                 <!-- End Team -->
 
@@ -347,15 +354,23 @@
                             <img class="img-responsive" src="img/770x860/02.jpg" alt="Team Image">
                         </div>
                     </div>
-                    <h4><a href="#">James Millner</a> <span class="text-uppercase margin-l-20">Lead Developer</span></h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
-                        magna ut consequat siad esqudiat dolor</p>
-                    <!-- <a class="link" href="#">Read More</a> -->
+                    <h4><a href="#">Mohd. Javed</a> <span class="text-uppercase margin-l-20">Architect</span></h4>
+                    <p>
+                        Javed finished his bachelors in Architecture from Jamia Millia Islamia, New Delhi. After
+                        completing his degree in Architecture, Javed constantly working for 4 years on a wide range of
+                        projects, including Residential, Commercial, Institutional Hospitality & Industrial.
+                    </p>
+                    <p id="more-desc-02">
+                        Being specialized in residential and office space design he developed a keen interest in design
+                        and detailing. He is a travel enthusiast and loves to explore and observe the surroundings in
+                        his own unique way.
+                    </p>
+                    <a class="link" id="read-more-02">Read More</a>
                 </div>
                 <!-- End Team -->
 
                 <!-- Team -->
-                <div class="col-sm-4 sm-margin-b-50">
+                <!-- <div class="col-sm-4 sm-margin-b-50">
                     <div class="bg-color-white margin-b-20">
                         <div class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
                             <img class="img-responsive" src="img/770x860/03.jpg" alt="Team Image">
@@ -363,9 +378,9 @@
                     </div>
                     <h4><a href="#">Scarlet Johanson</a> <span class="text-uppercase margin-l-20">Designer</span></h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
-                        magna ut consequat siad esqudiat dolor</p>
-                    <!-- <a class="link" href="#">Read More</a> -->
-                </div>
+                        magna ut consequat siad esqudiat dolor</p> -->
+                <!-- <a class="link" href="#">Read More</a> -->
+                <!-- </div> -->
                 <!-- End Team -->
             </div>
             <!--// end row -->
@@ -454,6 +469,7 @@
 
     <!-- PAGE LEVEL SCRIPTS -->
     <script src="js/layout.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
     <script src="js/components/swiper.min.js" type="text/javascript"></script>
     <script src="js/components/wow.min.js" type="text/javascript"></script>
 
